--- a/rps/style.css
+++ b/rps/style.css
@@ -1,13 +1,29 @@
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.row {
+  margin:0;
+}
+
+img {
+  height: 100px;
+  width:200px;
+  margin:10px;
+}
+
+#rock {
+  background-color: green;
+  color: white;
+  font-size: 2em;
+  margin: 15px;
+}
+
+#paper {
+  background-color: yellow;
+  font-size: 2em;
+  margin: 15px;
+}
+
+#scissors {
+  background-color: black;
+  color:white;
+  font-size: 2em;
+  margin: 15px;
 }
